<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ENUM_SolidAttenuator_States" Id="{a9b56f49-37af-4519-bf3c-f4ee10056eb1}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE ENUM_SolidAttenuator_States :
(
    Unknown := 0,
    OUT := 1,
    Target1 := 2,
    Target2 := 3,
    Target3 := 4,
    Target4 := 5,
    Target5 := 6,
    Target6 := 7, // add four more targets on 9-9-25
    Target7 := 8,
    Target8 := 9,
    Target9 := 10

)UINT;
END_TYPE

]]></Declaration>
  </DUT>
</TcPlcObject>